# Schedule-manager

./: .env.example  .gitignore  CONTRIBUTING.md  pyproject.toml
app/: config.py  db_setup.py  run_migrations.py
db/: connection.py
migrations/: 0001_create_schema_migrations.sql  0002_create_people.sql  0003_create_authentication.sql  0004_create_capabilities.sql  0005_create_businesses.sql  0006_create_business_owners.sql  0007_create_units.sql  0008_create_workstation.sql  0009_create_person_capabilities_and_index.sql  0011_create_business_holidays_and_index.sql  0012_create_unit_holidays_and_index.sql  0013_create_workstation_holidays_and_index.sql
repositories/: people_repository.py
